# hatsudenki

./: .gitignore  Pipfile  README.md  setup.cfg
docs/: glossary.md  relation_sample.md  table_definition_format.md
example/: work.py
sample_dsl/define/: master_tag.yml
sample_dsl/dynamo/example/: child.yml  one.yml  root.yml
sample_dsl/enum/: example.yml
sample_dsl/master/: example.yml  relation_example.yml
src/hatsudenki/: manage.py
src/hatsudenki/commands/: base.py  build_master.py  generate.py  setup_dsl.py
src/hatsudenki/define/: config.py
