[metadata]
name = hatsudenki
version = 0.00.01
url = https://hogehoge.com
author = jumpei-nakajima
author_email = jumpei.nakajima@gmail.com

[options]
package_dir =
  =src
packages=find:
install_requires =
  aioboto3==6.4.1
  boto3==1.9.252
  dill==0.3.1.1
  pyyaml==5.2
  openpyxl==3.0.2
  msgpack==0.6.2
  lz4==2.2.1

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
  hatsudenki-gen = hatsudenki.manage:cli

